# lsm9ds1

./: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  Doxyfile.in  Makefile  README.md  build.sh  liblsm9ds1_gdb_arm-poky-linux-gnueabi.launch  lsm9ds1.sublime-project  lsm9ds1.sublime-workspace  lsm9ds1_gdb_arm-poky-linux-gnueabi.launch  remote_lsm9ds1_client.launch
conf/: lsm9ds1.json
docs/: rpi_wiring_schematic.fzz
docs/html/: annotated.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  lsm9ds1_8h.html  lsm9ds1_8h__incl.md5  lsm9ds1_8h_source.html  lsm9ds1__accel_8h.html  lsm9ds1__accel_8h__dep__incl.md5  lsm9ds1__accel_8h__incl.md5  lsm9ds1__accel_8h_source.html  lsm9ds1__bus_8h.html  lsm9ds1__bus_8h__dep__incl.md5  lsm9ds1__bus_8h__incl.md5  lsm9ds1__bus_8h_source.html  lsm9ds1__error_8h.html  lsm9ds1__error_8h__dep__incl.md5  lsm9ds1__error_8h_source.html  lsm9ds1__gyro_8h.html  lsm9ds1__gyro_8h__dep__incl.md5  lsm9ds1__gyro_8h__incl.md5  lsm9ds1__gyro_8h_source.html  lsm9ds1__mag_8h.html  lsm9ds1__mag_8h__dep__incl.md5  lsm9ds1__mag_8h__incl.md5  lsm9ds1__mag_8h_source.html  lsm9ds1__private_8h_source.html  lsm9ds1__temp_8h.html  lsm9ds1__temp_8h__dep__incl.md5  lsm9ds1__temp_8h__incl.md5  lsm9ds1__temp_8h_source.html  menudata.js  structaccelerometer__converted__data__t-members.html  structaccelerometer__converted__data__t.html  (+45 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js
docs/man/man3/: _home_christopher_Documents_lsm9ds1_inc_.3  accelerometer_converted_data_t.3  accelerometer_data.3  gyro_converted_data_t.3  gyro_data.3  lsm9ds1.h.3  lsm9ds1_accel_settings_t.3  lsm9ds1_bus_t.3  lsm9ds1_converted_data_t.3  lsm9ds1_data_t.3  lsm9ds1_device_t.3  lsm9ds1_gyro_settings_t.3  lsm9ds1_i2c_settings_t.3  lsm9ds1_i2c_t.3  lsm9ds1_mag_settings_t.3  lsm9ds1_settings.3  lsm9ds1_spi_settings_t.3  lsm9ds1_spi_t.3  mag_converted_data_t.3  mag_data.3
inc/: lsm9ds1.h  lsm9ds1_accel.h  lsm9ds1_bus.h  lsm9ds1_common.h  lsm9ds1_config.h  lsm9ds1_debug.h  lsm9ds1_error.h  lsm9ds1_gyro.h  lsm9ds1_mag.h  lsm9ds1_private.h  lsm9ds1_regs.h  lsm9ds1_settings.h  lsm9ds1_temp.h
src/: lsm9ds1.c  lsm9ds1_accel.c  lsm9ds1_bus.c  lsm9ds1_common.c  lsm9ds1_config.c  lsm9ds1_gyro.c  lsm9ds1_mag.c  lsm9ds1_pipe.c  lsm9ds1_temp.c  lsm9ds1_wrap.c
tests/: test.c  test.py  valgrind-out.txt
